--- a/css/layout.css
+++ b/css/layout.css
@@ -8,7 +8,23 @@ body {
 }
 
 .cnt1 {
-    background-color: #b0c4de;
+    background-color: #89815d;
+    background-image: url(../Images/top.png);
+    width: 100%;
+    height: 100%;
+    background-size: 100% 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    padding-top: 3%;
+    padding-bottom: 3%;
+}
+
+#search {
+    background-color: rgba(245, 245, 245, 0.7);
+}
+
+#button_group {
+    background-color: rgba(245, 245, 245, 0.7);
 }
 
 .footer {
@@ -17,13 +33,14 @@ body {
     padding: 19px 0;
     background-color: #f5f5f5;
     position: absolute;
-    bottom: 0;
     width: 100%;
     height: 50px;
+    opacity: 0.8;
 }
 
 .navbar {
-    background: rgba(x, x, x, 0.1);
+    padding-right: 15px;
+    padding-top: 15px;
 }
 
 #nav1 .btn {
@@ -31,9 +48,10 @@ body {
     transition: all 0.3s;
 }
 
-.list-group {
+
+/*.list-group {
     margin-top: 10px;
-}
+}*/
 
 .list-group1 {
     display: flex;
@@ -51,4 +69,285 @@ li {
 
 .card {
     margin: 10px;
+}
+
+ul {
+    list-style: none;
+}
+
+html {
+    height: 100%;
+    width: 100%;
+}
+
+body {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+}
+
+.wrapper {
+    width: 100%;
+    /*height:100%;*/
+    margin: 0 auto;
+    display: inline-block;
+    /*background-color: #990000;*/
+}
+
+#login_background {
+    background-image: url(../Images/back_login.jpg);
+    background-repeat: no-repeat;
+    background-position: center 0;
+    background-attachment: fixed;
+    background-size: 80% 100%;
+    height: 100%;
+}
+
+#login_content {
+    position: relative;
+    top: 15%;
+    left: 10%;
+    width: 80%;
+    height: 60%;
+    text-align: center;
+    display: block;
+}
+
+#user_pic {
+    border-radius: 50%;
+    width: 10%;
+    margin: 0 auto;
+}
+
+.myinput {
+    display：inline-block;
+    margin-top: 2%;
+}
+
+.myinput input {
+    background-color: #FFFFFF;
+    opacity: 0.7;
+    width: 30%;
+    padding-bottom: 0.3%;
+    padding-top: 0.3%;
+    display: inline-block;
+}
+
+#user_choose {
+    margin-top: 2%;
+    display：inline-block;
+}
+
+#user_choose a {
+    text-decoration: none;
+    color: #FFFFFF;
+    font-style: bold;
+    margin-left: 5%;
+    padding: 0.3%;
+    margin-right: 5%;
+}
+
+#forget {
+    background-color: #c3a6a6;
+}
+
+#toregister {
+    background-color: #99b8cd;
+}
+
+#login,
+#register {
+    margin-top: 2%;
+    background-color: #41433c;
+    opacity: 0.7;
+    width: 35%;
+    height: 15%;
+    color: #FFFFFF;
+    padding-top: 0.3%;
+    padding-bottom: 0.3%;
+}
+
+#register_background {
+    background-image: url(../Images/back_register.jpg);
+    background-repeat: no-repeat;
+    background-position: center 0;
+    background-attachment: fixed;
+    background-size: 80% 100%;
+    height: 100%;
+}
+
+#register_content {
+    position: relative;
+    top: 30%;
+    left: 10%;
+    width: 80%;
+    height: 60%;
+    text-align: center;
+}
+
+#user_check {
+    margin-top: 2%;
+    display：inline-block;
+}
+
+.check {
+    display: inline;
+    padding: 1%;
+    font-style: bold;
+}
+
+.check span {
+    background-color: #a99184;
+    padding: 0.3%;
+}
+
+
+/*index*/
+
+#index_wrapper {
+    width: 90%;
+    height: 100%;
+    margin: 0 auto;
+}
+
+.justify-content-end span {
+    color: #350a19;
+    font-size: 1.5em;
+    display: inline;
+}
+
+#span1 {
+    margin-right: 60%;
+}
+
+#span2 {
+    margin-right: 35%;
+}
+
+#index_back {
+    width: 100%;
+    height: 100%;
+    background-color: #eceeec;
+}
+
+#index_content {
+    width: 80%;
+    margin: 0 auto;
+    padding-top: 2%;
+    padding-bottom: 2%;
+}
+
+.classify {
+    display: block;
+    height: 100%;
+}
+
+.classify_title {
+    display: inline-block;
+    border-style: solid;
+    border-color: #938c6e;
+    background-color: #cdc1c0;
+    text-align: center;
+    font-size: 1em;
+    padding-top: 0.5em;
+    padding-right: 1em;
+    padding-bottom: 0.5em;
+    padding-left: 1em;
+}
+
+.classify_detail {
+    display: inline-block;
+    font-size: 1em;
+    border-style: solid;
+    border-color: #938c6e;
+    text-align: center;
+}
+
+.classify_detail a {
+    color: #000000;
+}
+
+
+/*shopping cart*/
+
+#shoppingcart_wrapper {
+    width: 80%;
+    margin: 0 auto;
+    background-color: #e6eaeb;
+}
+
+#shoppingcart_top {
+    width: 100%;
+    background-image: url(../Images/top_shoppingcart.png);
+    background-size: 100% 100%;
+    background-position: center 0;
+    background-repeat: no-repeat;
+    display: inline-block;
+    padding-top: 15%;
+    padding-left: 3%;
+}
+
+#shoppingcart_top img {
+    margin-left: 2%;
+}
+
+#shoppingcart_top span {
+    color: #95B579;
+    margin-left: 2%;
+    font-style: bold;
+    padding: 0.2% 0.3% 0.2% 0.3%;
+    background-color: #FFFFFF;
+}
+
+#shoppingcart_content {
+    margin: 0 auto;
+    padding: 5%;
+}
+
+#notice {
+    padding: 0.8%;
+    font-style: bold;
+    background-color: #e2dcc5;
+    display: inline-block;
+}
+
+.card_cart {
+    margin-top: 5%;
+}
+
+.cart_img {
+    padding-right: 0;
+    padding-left: 4%;
+}
+
+.cart_img img {
+    width: 100%;
+    height: 100%;
+}
+
+.cart_detail {
+    text-align: center;
+}
+
+.cart_title {
+    height: 33.3%;
+    background-color: #f8f8f8;
+}
+
+.cart_content {
+    height: 66.7%;
+    background-color: #cfd4b2;
+    padding-top: 3%;
+}
+
+.cart_delete {
+    margin: 0 auto;
+}
+
+.cart_deletediv {
+    height: 100%;
+    width: 80%;
+    background-color: #e0d6d6;
+    text-align: center;
+    padding-top: 27%;
 }
