--- a/css/MySite.css
+++ b/css/MySite.css
@@ -36,8 +36,21 @@
 }
 
 .bg {
-    background-image: url(../Images/bg7.jpg);
     height: 100%;
     background-size: 100% !important;
     background-repeat: no-repeat;
+}
+
+.address-box {
+    background-color: rgba(255, 255, 255, 0.5);
+    border: 2px solid lightgray;
+    border-top: 10px solid lightgray;
+}
+
+.breadcrumb li {
+    font-size: 24px;
+}
+
+.btn-icon {
+    cursor: pointer;
 }
