--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -107,6 +107,10 @@ body {
     height: 100%;
 }
 
+.card-img-top {
+    height: 200px;
+}
+
 #login_content {
     position: relative;
     top: 15%;
