--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -128,7 +128,7 @@ body {
 }
 
 .myinput {
-    display：inline-block;
+    display: inline-block;
     margin-top: 2%;
 }
 
@@ -143,7 +143,7 @@ body {
 
 #user_choose {
     margin-top: 2%;
-    display：inline-block;
+    display: inline-block;
 }
 
 #user_choose a {
@@ -199,7 +199,7 @@ body {
 
 #user_check {
     margin-top: 2%;
-    display：inline-block;
+    display: inline-block;
 }
 
 .check {
